chore: clean up empty code change sections

--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,25 @@
-# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
+# Dependencies
+node_modules/
 
-# dependencies
-node_modules
+# Build output
+dist/
 
-# Raycast
-.raycast
+# Raycast specific files  
+raycast-env.d.ts  
+.raycast-swift-build  
+.swiftpm  
+compiled_raycast_swift  
+compiled_raycast_rust 
 
-# build
-dist
+# OS
+.DS_Store
+
+# IDE
+.idea/
+.vscode/
+*.swp
+*.swo
+
+# Logs
+*.log
+npm-debug.log*
